// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders Header for route / 1`] = `

<div class="flex w-full cursor-default items-center justify-between gap-5 px-6 py-3 md:h-16">
  <gui-mobile-menu classname="md:hidden">
  </gui-mobile-menu>
  <gui-user-menu>
  </gui-user-menu>
</div>

`;

exports[`renders Header for route /explore 1`] = `

<div class="flex w-full cursor-default items-center justify-between gap-5 px-6 py-3 md:h-16">
  <gui-explorer-header>
  </gui-explorer-header>
  <gui-mobile-menu classname="md:hidden">
  </gui-mobile-menu>
  <gui-user-menu>
  </gui-user-menu>
</div>

`;

exports[`renders Header for route /help 1`] = `

<div class="flex w-full cursor-default items-center justify-between gap-5 px-6 py-3 md:h-16">
  <gui-breadcrumb-header>
  </gui-breadcrumb-header>
  <gui-mobile-menu classname="md:hidden">
  </gui-mobile-menu>
  <gui-user-menu>
  </gui-user-menu>
</div>

`;

exports[`renders Header for route /labels 1`] = `

<div class="flex w-full cursor-default items-center justify-between gap-5 px-6 py-3 md:h-16">
  <gui-labels-header>
  </gui-labels-header>
  <gui-mobile-menu classname="md:hidden">
  </gui-mobile-menu>
  <gui-user-menu>
  </gui-user-menu>
</div>

`;

exports[`renders Header for route /queries 1`] = `

<div class="flex w-full cursor-default items-center justify-between gap-5 px-6 py-3 md:h-16">
  <gui-queries-header>
  </gui-queries-header>
  <gui-mobile-menu classname="md:hidden">
  </gui-mobile-menu>
  <gui-user-menu>
  </gui-user-menu>
</div>

`;

exports[`renders Header for route /settings 1`] = `

<div class="flex w-full cursor-default items-center justify-between gap-5 px-6 py-3 md:h-16">
  <gui-breadcrumb-header>
  </gui-breadcrumb-header>
  <gui-mobile-menu classname="md:hidden">
  </gui-mobile-menu>
  <gui-user-menu>
  </gui-user-menu>
</div>

`;
